[package]
name = "tokio-postgres-rustls-connection-pool-demo"
version = "0.0.1"
authors = ["ZPascal"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
config = "0.11.0"
deadpool-postgres = "0.7.0"
futures = "0.3.15"
log = "0.4.14"
pretty_env_logger = "0.4.0"
rustls = "0.19.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.6.0", features = ["full"] }
tokio-postgres = "0.7.2"
tokio-postgres-rustls = "0.8.0"